--- a/client/index.html
+++ b/client/index.html
@@ -13,24 +13,24 @@
   <!-- Header Section-->
   <header class="header">
     <div class="header_left">
-    	<img src="img/logo/logo_img1.png">
+    	<img src="img/logo/logo_img1.png" alt="Company logo">
     	<img src="img/logo/logo_img2.png">
-    	<img src="img/logo/logo_img3.png">
+    	<img src="img/logo/logo_img3.png" alt="Brand">
     </div>
     <div class="header_center">
-    	<input placeholder="Search" value="" type="text">
+    	<input placeholder="Search" value="" type="text" alt="Search box">
     </div>
     <div class="header_right">
-    	<img src="img/icons/icon1.png">
-    	<img src="img/icons/icon2.png">
-    	<img src="img/icons/icon3.png">
+    	<img src="img/icons/icon1.png" alt="History">
+    	<img src="img/icons/icon2.png" alt="Favorite photos">
+    	<img src="img/icons/icon3.png" alt="User profile">
     </div>
   </header>
   <!-- Intro Section -->
   <section class="intro">
     <div class="intro_column">
       <h3>DANIEL DANG</h3>
-      <img src="img/profile_img/davidbeckham.jpg" alt="" class="profile"> 
+      <img src="img/profile_img/davidbeckham.jpg" class="profile" alt="Profile image"> 
     </div>
     <div class="intro_column">
       <p><strong>Welcome to Instagram!</strong></p>
@@ -41,26 +41,26 @@
   <!-- Gallery Section -->
   <div class="gallery">
    <div class="gallery_upper">
-      <img src="img/profile_img/kimkardashian.jpg" height="50px" alt="" class="profile">
-      <h4>kimkardashian<img class="verified_icon" alt="verified" src="img/icons/icon4.png"> <p>Kim Kardashian</p></h4>
+      <img src="img/profile_img/kimkardashian.jpg" height="50px" class="profile" alt="Profile image">
+      <h4>kimkardashian<img alt="verified" src="img/icons/icon4.png"> <p>Kim Kardashian</p></h4>
       <button>Follow</button>
    </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian1.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian1.jpg" class="cards" alt="Photo of FIT TEA" /></a>
       <h4>FIT TEA</h4>
       <p class="text_column">Finally found <a href="">@fittea</a> shakes for protein, fiber, and probiotics. Perfect after my workouts 💪🏼 Fit Shakes tastes amazing</p>
       <p class="tag">#ad</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian2.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian2.jpg" class="cards" alt="Photo of MY GRANDA" /></a>
       <h4>MY GRANDMA</h4>
       <p class="text_column">To the woman who started it all, my grandma MJ. You taught all of us girls to be strong independent women. I love you</p>
       <p class="tag">#grandma #independentwomen</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian3.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian3.jpg" class="cards" alt="Photo of THROWBACK TUESDAY" /></a>
       <h4>THROWBACK TUESDAY</h4>
       <p class="text_column">Throwback to when Kourtney & I were 9&10. Not sure what's cooler Allison's LA Raiders boxers or Kourt's Reebok pumps</p>
       <p class="tag">#throwback #coolkids</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian4.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/kimkardashian4.jpg" class="cards" alt="Photo of COSTA RICA" /></a>
       <h4>COSTA RICA</h4>
       <p class="text_column">Me and my Sainty boo a few months ago...scroll through. Look at how adorable my little angel was. What a cutie.</p>
       <p class="tag">#baby #cute #saintwest</p>
@@ -68,26 +68,26 @@
   </div>
   <div class="gallery">
    <div class="gallery_upper">
-      <img src="img/profile_img/justintimberlake.jpg" height="50px" alt="" class="profile">
-      <h4>justintimberlake<p>Justin Timberlake</p></h4>
+      <img src="img/profile_img/justintimberlake.jpg" height="50px" class="profile" alt="Profile photo">
+      <h4>justintimberlake<img alt="verified" src="img/icons/icon4.png"><p>Justin Timberlake</p></h4>
       <button>Follow</button>
    </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake1.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake1.jpg" class="cards" alt="Photo of GOLF DAY" /></a>
       <h4>GOLF DAY</h4>
       <p class="text_column"><a href="">@mac11</a> almost aced it! Fun day hanging and getting some golf in!</p>
       <p class="tag">#gogrizzlies</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake2.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake2.jpg" class="cards" alt="Photo of GOOD BYE OLD FRIEND" /></a>
       <h4>GOOD BYE OLD FRIEND</h4>
       <p class="text_column">Where do I begin..? Words just aren't enough with heartache like this.</p>
       <p class="tag">#rip #heartbreaking</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake3.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake3.jpg" class="cards" alt="Photo of HAPPY BIRTHDAY" /></a>
       <h4>HAPPY BIRTHDAY</h4>
       <p class="text_column">You make me laugh. You make me smile. Happy Birthday, my heart. </p>
       <p class="tag">#happybirthday #mylove #soulmate</p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake4.jpg" alt="" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="img/instagram_img/justintimberlake4.jpg" class="cards" alt="Photo of PEBBLE BEACH" /></a>
       <h4>PEBBLE BEACH</h4>
       <p class="text_column">What a day hanging with my boy, <a href="">@justinprose99</a> at Pebble Beach! </p>
       <p class="tag">#beach #hangout</p>
@@ -95,7 +95,7 @@
   </div>
   <!-- Footer Section -->
   <footer id="contact">
-    <p class="footer_header" id="f1">About us</p>
+    <p class="footer_header" id="f1">About</p>
     <p class="footer_header" id="f2">Privacy</p>
     <p class="footer_header" id="f3">Term</p>
     <p class="footer_header" id="f4">Support</p>
