--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="header_left">
     	<img src="img/logo/logo_img1.png" alt="Company logo">
-    	<img src="img/logo/logo_img2.png">
+    	<img src="img/logo/logo_img2.png" width="1px" alt="">
     	<img src="img/logo/logo_img3.png" alt="Brand">
     </div>
     <div class="header_center">
