--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,18 @@
 <!doctype html>
+<!-- Group information:
+
+Student 1:
+
+Tran Ngoc Phuong Dang (a.k.a Daniel). Student number: 7843618
+
+Student 2:
+
+Chi Hieu Tran (a.k.a Winson). Student number: 7822620
+
+Student 3:
+
+Duncan Robertson. Student number: 8074833 -->
+
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,8 +20,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Instagram Clone</title>
 <link href="css/instagramClone.css" rel="stylesheet" type="text/css">
+
+<script src="js/jquery.min.js"></script>
+
+<script>
+function loadIntro() {
+    Promise.resolve()
+    .then(() => {
+      return $.post('loadUser');
+    })
+    .then((posts) => {
+      console.log(posts);
+      displayName = posts.displayName;
+      $('#displayName').html(posts[0].displayName);
+    });
+  }
+</script>
+
 </head>
-<body>
+<body onload="loadIntro();">
 <!-- Main Container -->
 <div class="container"> 
   <!-- Header Section-->
@@ -27,9 +58,9 @@
     </div>
   </header>
   <!-- Intro Section -->
-  <section class="intro">
+  <section class="intro" >
     <div class="intro_column">
-      <h3>DANIEL DANG</h3>
+      <h3 id="displayName"></h3>
       <img src="img/profile_img/davidbeckham.jpg" class="profile" alt="Profile image"> 
     </div>
     <div class="intro_column">
