Update bootstrap and jquery

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@ Duncan Robertson. Student number: 8074833 -->
 <!-- Adds CSS -->
 <link href="css/instagramClone.css" rel="stylesheet" type="text/css">
 <!-- Adds JQuery -->
-<script src="js/jquery.min.js"></script>
+<script src="js/jquery-3.2.1.min.js"></script>
 <!-- JavaScript to load the contents of the page -->
 <script>
   // Function to load the contents of the page
